Closed
Bug 1239955
Opened 6 years ago
Closed 6 years ago
Should pop NS_ERROR_OFFLINE if a non-gonk agent is without connectivity
Categories
(Core :: Networking, defect)
Core
Networking
Tracking
()
People
(Reporter: CuveeHsu, Assigned: kershaw)
References
Details
(Whiteboard: [ft:conndevices])
Attachments
(2 files, 1 obsolete file)
10.89 KB,
patch
|
kershaw
:
review+
|
Details | Diff | Splinter Review |
10.78 KB,
patch
|
kershaw
:
review+
jocheng
:
approval‑mozilla‑b2g44+
|
Details | Diff | Splinter Review |
We have tested in Linux and OS X STR: 1. Disconnect wifi and ethernet 2. Browse a non-cached website Expected behaviour: Indicate user this agent is without connectivity. Actual behaviour: "Server not found" is shown.
Reporter | ||
Comment 1•6 years ago
|
||
Hello Daniel, In Linux, we found that both |IOService::SetConnectiviy| and |IOService::SetOffline| are not triggered when we disconnect the internet. Therefore, DNSService is not able to tell the connectivity. Moreover, DNSService seems to depend on offline status instead of (offline || !connectivity). It's a little weird to has a non-local behaviour without connectivity. Is this behaviour by design? Thanks.
Flags: needinfo?(daniel)
Comment 2•6 years ago
|
||
This is by design, but there's more to it. Let me tell you my view of it all. First: "connectivity" and "offline" are not the same thing (any more). The previous stricter association between them caused a lot of head aches (mostly due to the trickiness in perfectly detecting connectivity with no false positives). Connectivity is what we programmatically have detected and believe the status is on the "link" right now. Offline is the status we like the browser to consider it to be in. You can for example set it to offline manually, and it is then set offline completely independently of what the connectivity is. So, 'offline' is the state that would restrict Firefox from doing things that require that it is online. It could then actually consider itself online while the connectivity goes to false. There's a pref called 'network.offline-mirrors-connectivity' (false by default) that if enabled sets Firefox's offline mode in sync with the connectivity.
Flags: needinfo?(daniel)
Reporter | ||
Comment 3•6 years ago
|
||
Thanks for your quick response :) Now I know the difference between "offline" and "connectivity" Two follow-up questions: 1. If connectivity == false, necko would return NS_ERROR_UNKNOWN_HOST to docshell and redirect the error to gaia in b2g case. Therefore, gaia can not tell if it's a real dns error or a connectivity error. Is this behaviour also by design? 2. I haven't test "network.offline-mirrors-connectivity" pref since |IOService::SetConnectiviy| seems not called in Linux. IIRC even if the pref is on, the DNSService still doesn't rely on connectivity since the only chance to change |mOffline| is here. https://dxr.mozilla.org/mozilla-central/source/netwerk/base/nsIOService.cpp#1029
Flags: needinfo?(daniel)
Comment 4•6 years ago
|
||
(In reply to Junior [:junior] from comment #3) > 1. If connectivity == false, necko would return NS_ERROR_UNKNOWN_HOST to > docshell and redirect the error to gaia in b2g case. Therefore, gaia can not > tell if it's a real dns error or a connectivity error. Is this behaviour > also by design? When would necko return this you mean? I *believe* the intent is that NS_ERROR_OFFLINE should be returned when Firefox is offline, and when we're not offline we're doing the normal procedures and then I would guess name resolving without a network connection typically fails with an NS_ERROR_UNKNOWN_HOST unless you resolve a name that's already cached, in /etc/hosts or similar. If we're only using the offline status to stop us from using the network, then I think it makes sense that if we're online we try to resolve the host using the normal means. > 2. I haven't test "network.offline-mirrors-connectivity" pref since > |IOService::SetConnectiviy| seems not called in Linux. SetConnectivityInternal() should be called on Linux afaics. > IIRC even if the pref > is on, the DNSService still doesn't rely on connectivity since the only > chance to change |mOffline| is here. > https://dxr.mozilla.org/mozilla-central/source/netwerk/base/nsIOService. > cpp#1029 I agree! It seems the "linking" is mostly for nsIOService->GetOffline() but unfortunately the DNSService doesn't use that method, nsIOService sets the offline status explicitly for it with mDNSService->SetOffline(). It looks like a potential bug to me. You agree?
Flags: needinfo?(daniel)
Reporter | ||
Comment 5•6 years ago
|
||
(In reply to Daniel Stenberg [:bagder] from comment #4) > When would necko return this you mean? Finally docshell would generate a link like about:neterror?e=dnsNotFound according to the error from Necko (or other component). > > > 2. I haven't test "network.offline-mirrors-connectivity" pref since > > |IOService::SetConnectiviy| seems not called in Linux. > > SetConnectivityInternal() should be called on Linux afaics. > I see the logic here, but the gdb doesn't stop. Let me check it carefully later. https://dxr.mozilla.org/mozilla-central/source/netwerk/system/linux/nsNotifyAddrListener_Linux.cpp#532 > > IIRC even if the pref > > is on, the DNSService still doesn't rely on connectivity since the only > > chance to change |mOffline| is here. > > https://dxr.mozilla.org/mozilla-central/source/netwerk/base/nsIOService. > > cpp#1029 > > I agree! It seems the "linking" is mostly for nsIOService->GetOffline() but > unfortunately the DNSService doesn't use that method, nsIOService sets the > offline status explicitly for it with mDNSService->SetOffline(). It looks > like a potential bug to me. You agree? Yes I agree. Let's say: if gaia wants to tell if it's a real dns error or a connectivity error, we should 1. enable the pref "network.offline-mirrors-connectivity" 2. Let mOffline of DNSService rely on IOService::GetConnectivity. How about this idea?
Flags: needinfo?(daniel)
Comment 6•6 years ago
|
||
(In reply to Junior [:junior] from comment #5) > Let's say: if gaia wants to tell if it's a real dns error or a connectivity > error, > we should > 1. enable the pref "network.offline-mirrors-connectivity" > 2. Let mOffline of DNSService rely on IOService::GetConnectivity. For this (2), it would be enough if DNSService relied on IOService::Offline instead of having its own offline mode storage, as then the (1) pref would do its work properly and it would remain working like now when the pref is false.
Flags: needinfo?(daniel)
Assignee | ||
Comment 7•6 years ago
|
||
Hi Daniel, Could you please take a look at this patch? Thanks.
Attachment #8709886 -
Flags: review?(daniel)
Comment 8•6 years ago
|
||
(In reply to Kershaw Chang [:kershaw] from comment #7) > Could you please take a look at this patch? I think it looks fine, and it even simplifies the code a bit I think by centralizing the offline status more. But I'd like to ask :mcmanus for his view on the approach, plus either his review or hand-off to me for reviewing as I'm not a network peer.
Flags: needinfo?(mcmanus)
Assignee | ||
Comment 10•6 years ago
|
||
(In reply to Patrick McManus [:mcmanus] from comment #9) > have you thought about e10s issues here? Do you mean if the DNSService can work in content process? I also modified ChildDNSService to get the offline status from IOService, so I think this should be no problem in content process.
Assignee | ||
Updated•6 years ago
|
Attachment #8709886 -
Flags: review?(daniel) → review?(mcmanus)
Assignee | ||
Comment 12•6 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=2d12dab32050
Comment 13•6 years ago
|
||
Hi Patrick, Could you kindly review the patch? Thanks!
Flags: needinfo?(mcmanus)
Updated•6 years ago
|
Whiteboard: [ft:conndevices]
Updated•6 years ago
|
Attachment #8709886 -
Flags: review?(mcmanus)
Attachment #8709886 -
Flags: review?(daniel)
Attachment #8709886 -
Flags: feedback+
Comment 14•6 years ago
|
||
Hi Daniel, Could you kindly review the patch? Thanks!
Assignee: nobody → kechang
Flags: needinfo?(mcmanus) → needinfo?(daniel)
Updated•6 years ago
|
blocking-b2g: --- → 2.5+
Updated•6 years ago
|
Blocks: TV_Testing_2.6
Comment 15•6 years ago
|
||
if any progress here?
Comment 16•6 years ago
|
||
Comment on attachment 8709886 [details] [diff] [review] Let DNSService rely on IOService::Offline Review of attachment 8709886 [details] [diff] [review]: ----------------------------------------------------------------- LGTM!
Attachment #8709886 -
Flags: review?(daniel) → review+
Updated•6 years ago
|
Flags: needinfo?(daniel)
Assignee | ||
Comment 17•6 years ago
|
||
Carry reviewer's name. Thanks for reviewing this.
Attachment #8709886 -
Attachment is obsolete: true
Attachment #8720664 -
Flags: review+
Assignee | ||
Updated•6 years ago
|
Keywords: checkin-needed
Comment 18•6 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/0712c88206ab
Keywords: checkin-needed
Comment 19•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/0712c88206ab
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox47:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
Assignee | ||
Comment 21•6 years ago
|
||
Comment on attachment 8722425 [details] [diff] [review] Let DNSService rely on IOService::Offline, r=bagder (for B2G 2.5) NOTE: Please see https://wiki.mozilla.org/Release_Management/B2G_Landing to better understand the B2G approval process and landings. [Approval Request Comment] Bug caused by (feature/regressing bug #): n/a User impact if declined: Offline status of DNSService may be inconsistent with IOService. Testing completed: Local test. Risk to taking this patch (and alternatives if risky): Low, since it's a small change. String or UUID changes made by this patch: n/a
Attachment #8722425 -
Flags: approval‑mozilla‑b2g44?
Assignee | ||
Comment 22•6 years ago
|
||
(In reply to Kershaw Chang [:kershaw] from comment #21) > Comment on attachment 8722425 [details] [diff] [review] > Let DNSService rely on IOService::Offline, r=bagder (for B2G 2.5) > > NOTE: Please see https://wiki.mozilla.org/Release_Management/B2G_Landing to > better understand the B2G approval process and landings. > > [Approval Request Comment] > Bug caused by (feature/regressing bug #): n/a > User impact if declined: Offline status of DNSService may be inconsistent > with IOService. > Testing completed: Local test. > Risk to taking this patch (and alternatives if risky): Low, since it's a > small change. > String or UUID changes made by this patch: n/a Josh, could you help to approve this? Thanks.
Flags: needinfo?(jocheng)
Comment 23•6 years ago
|
||
Comment on attachment 8722425 [details] [diff] [review] Let DNSService rely on IOService::Offline, r=bagder (for B2G 2.5) Approve for TV 2.5
Flags: needinfo?(jocheng)
Attachment #8722425 -
Flags: approval‑mozilla‑b2g44? → approval‑mozilla‑b2g44+
Assignee | ||
Updated•6 years ago
|
Keywords: checkin-needed
Updated•6 years ago
|
Keywords: checkin-needed
Assignee | ||
Comment 24•6 years ago
|
||
@Tomcat, could you please help to commit this patch?(In reply to Josh Cheng [:josh] from comment #23) > Comment on attachment 8722425 [details] [diff] [review] > Let DNSService rely on IOService::Offline, r=bagder (for B2G 2.5) > > Approve for TV 2.5 @Tomcat, could you help to commit this patch? Thanks.
Flags: needinfo?(cbook)
Comment 25•6 years ago
|
||
https://hg.mozilla.org/releases/mozilla-b2g44_v2_5/rev/8a1846fcd859
status-b2g-v2.5:
--- → fixed
Flags: needinfo?(cbook)
You need to log in
before you can comment on or make changes to this bug.
Description
•