Bug 1239955 - Let DNSService rely on IOService::Offline, r=bagder